:bug: Fix Checkbox checked extra space (#18059)
animation end state should be preserved

close #18040

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -31,7 +31,7 @@
       border-radius: @border-radius-sm;
       visibility: hidden;
       animation: antCheckboxEffect 0.36s ease-in-out;
-      animation-fill-mode: both;
+      animation-fill-mode: backwards;
       content: '';
     }
 
